# OpenGL_Fractal

./: CMakeLists.txt  README.md
exes/old/shaders/: fractalFragmentShaderAPARTOFSET.fs  fractalFragmentShaderBEST.fs  fractalFragmentShaderBRIGHT.fs  fractalFragmentShaderRAW.fs  vertexShader.vs
exes/shaders/: computeShader.comp  fractalFragmentShader.fs  fractalFragmentShaderRAWCOSINE.fs  fractalFragmentShaderRAWDISCONNECTED.fs  fractalFragmentShaderWHITE.fs
lib/: CMakeLists.txt  glad.c  stb_image.cpp
lib/include/: stb_image.h
lib/include/glad/: glad.h
src/: CMakeLists.txt  EBO.cpp  EBO.h  Fractal_Settings.vs  VAO.cpp  VAO.h  VBO.cpp  VBO.h  main.cpp  utility.cpp  utility.h
src/shaders/: computeShader.comp  fractalFragmentShader.fs  fragmentShader.fs  vertexShader.vs
